fix header alignment

--- a/client/src/components/DataTable/_DataTable.scss
+++ b/client/src/components/DataTable/_DataTable.scss
@@ -4,9 +4,15 @@
 }
 
 .bx--data-table {
-  .align-right {
+  button.align-right {
     .bx--table-header-label {
+      width: 100%;
+      padding-right: 0;
       text-align: right;
+    }
+
+    span {
+      width: 100%;
     }
   }
 
